@@ -18,6 +18,8 @@ Minor changes
  * Fix undo for dataset histogram with a single output dataset
  * Fix error resizing ellipse with a tuple width, height or position setting
  * Only use finite values in histogram
+ * Rewrite Line/FillSet setting controls for internal consistency and to fix
+   new style extended fills
 
 Changes in 1.22:
  * Add option to ignore white space following delimiters when importing CSVs
